1_Containers/Kubernetes/namespace-basic.yml
apiVersion: v1
kind: Namespace
metadata:
  name: basic
  labels:
    name: basic
